<resources>
    <string name="app_name">MORENO</string>


    <string name="title_activity_sign_in">Sign In</string>

    <string name="welcome_label">Welcome</string>
    <string name="sign_in_label">Please sign in with: </string>

    <!--Main options-->
    <string name="arrange_sensor">Arrange sensors</string>
    <string name="start_measurement">Start measurements</string>
    <string name="stop_measurement">Stop measurements</string>

    <!--Limbs options-->
    <string name="title_activity_arrange_sensors">Arrange Sensors</string>
    <string name="available_sensors_label">Available sensors: </string>
    <string name="left_arm">Left arm</string>
    <string name="right_arm">Right arm</string>
    <string name="left_leg">Left leg</string>
    <string name="right_leg">Right leg</string>
    <string name="ok">Ok</string>

    <!--Settings-->
    <string name="action_settings">Settings</string>
    <string name="measurements">Measurements</string>
    <string name="handheld_wear_sync">Handheld &amp; Wear sync</string>
    <string name="handheld_server_sync">Handheld &amp; Server sync</string>

    <string name="measurement_sample_title">Sample interval</string>
    <string name="measurement_sample_summary">Every %1$s milisecond(s)</string>

    <string name="sync_notification_title">Notifications</string>
    <string name="sync_wifi_title">Only while on Wi-Fi</string>
    <string name="sync_interval_title">Sync interval</string>
    <string name="sync_interval_summary">Every %1$s hour(s)</string>

    <string name="info">Information</string>
    <string name="about_app">About the App</string>

    <!--Dialogs-->
    <string name="no_internet_connection_title">Please wait</string>
    <string name="no_internet_connection_message">Connecting...</string>
    <string name="arrange_dialog_title">Create new body device\'s configuration?</string>
    <string name="arrange_dialog_message">The previous body device\'s configuration will be deleted</string>
    <string name="start_sensing_dialog_title">Start sensing?</string>
    <string name="start_sensing_dialog_message"></string>
    <string name="stop_sensing_dialog_title">Stop sensing?</string>
    <string name="stop_sensing_dialog_message"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Toasts-->
    <string name="impossible_sing_in_1">Check the internet connection</string>
    <string name="impossible_sing_in_2">Impossible to sign in</string>
    <string name="devices_not_connected">No wear devices detected</string>
    <string name="devices_not_set">Set the sensors in your body</string>
    <string name="data_sent">Data received</string>
    <string name="data_not_sent">Synchronization error</string>
    <!--string name="data_sent">Data received: %1$s</string-->
    <!--string name="data_not_sent">Synchronization error: %1$s</string-->

    <!--Others-->
    <string name="arrangement_status">Wearing</string>
    <string name="sensing_status">Sensing</string>
    <string name="on_label">ON</string>
    <string name="off_label">OFF</string>

    <string name="action_sync_wear">Synchronize</string>
    <string name="action_del_wear">Delete data</string>

    <string name="title_activity_information">About the App</string>
    <string name="project">MORENO Project</string>
    <string name="resolution">Resolution N°: 491-010-2015-06-10</string>
    <string name="department">Electronic Engineering Department</string>
    <string name="app_description">Application developed by the Telecommunications and Telematics Research Group of the Politecnica Salesiana University.</string>


</resources>
