<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roquecontreras.dataapi.InformationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/project"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo_ups"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_description"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/resolution"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/department"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

</RelativeLayout>
