<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.roquecontreras.dataapi.ArrangeSensorsActivity">

    <TextView
        android:id="@+id/available_sensors_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/available_sensors_label"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/available_sensors_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/available_sensors_label"/>

    <CheckBox
        android:id="@+id/left_arm_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/left_arm"
        android:textStyle="bold"
        android:textColor="#000000"
        android:onClick="onCheckboxClicked"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:layout_below="@+id/available_sensors_label"/>
    <CheckBox
        android:id="@+id/right_arm_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/right_arm"
        android:textStyle="bold"
        android:textColor="#000000"
        android:onClick="onCheckboxClicked"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:layout_below="@+id/left_arm_checkbox"/>
    <CheckBox
        android:id="@+id/left_leg_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/left_leg"
        android:textStyle="bold"
        android:textColor="#000000"
        android:onClick="onCheckboxClicked"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:layout_below="@+id/right_arm_checkbox"/>
    <CheckBox
        android:id="@+id/right_leg_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/right_leg"
        android:textStyle="bold"
        android:textColor="#000000"
        android:onClick="onCheckboxClicked"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:layout_below="@+id/left_leg_checkbox"/>

    <LinearLayout
        android:id="@+id/upper_body"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/right_leg_checkbox"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/body_left_arm_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/body_left_arm_none"/>
        <ImageView
            android:id="@+id/body_right_arm_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/body_right_arm_none"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lower_body"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/upper_body">
        <ImageView
            android:id="@+id/body_left_leg_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/body_left_leg_none"/>
        <ImageView
            android:id="@+id/body_right_leg_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/body_right_leg_none"/>
    </LinearLayout>

    <Button
        android:id="@+id/arrange_sensors_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arrange_sensor"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@+id/lower_body"/>

</RelativeLayout>