<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <Switch
                android:id="@+id/arrangement_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/on_label"
                android:textOff="@string/off_label"
                android:text="@string/arrangement_status"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:layout_alignParentTop="true"
                android:clickable="false" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <Switch
                android:id="@+id/sensing_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/on_label"
                android:textOff="@string/off_label"
                android:text="@string/sensing_status"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:layout_alignParentTop="true"
                android:clickable="false"/>
        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/arrangement_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/arrangement"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:layout_alignParentTop="true"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/sesing_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sensing"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:layout_alignParentTop="true"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/upload_data_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/upload_data"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:layout_alignParentTop="true"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/preferences_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/settings"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:layout_alignParentTop="true"/>
        </FrameLayout>

    </LinearLayout>


</LinearLayout>
